# kra_imp

./: .clang-format  .clang-format-ignore  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: clang-tidy.yml  cmake-multi-platform.yml  windows-build.yml
cmake/: config.hpp.in  kra_impConfig.cmake.in
doc/: CMakeLists.txt  Doxyfile.in
docs/: CMakeLists.txt  Doxyfile.in
inc/kra_imp/: config.hpp  kra_imp.hpp  types.hpp
src/: kra_imp.cpp
src/lzf/: lzf.h
test/: CMakeLists.txt  archive_tests.cpp  delinearize_tests.cpp  image_frames_tests.cpp  image_layer_tests.cpp  main_doc_tests.cpp  read_layer_data_tests.cpp  read_layer_header_tests.cpp  test.cpp
tests/: CMakeLists.txt  archive_tests.cpp  delinearize_tests.cpp  kralapp.cpp  read_layer_data_tests.cpp  test.cpp
